# workmate_test

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
core/: exceptions.py  filters.py  log_entry.py  log_processor.py  log_reader.py  parser_creator.py  report_manager_creator.py
core/interfaces/: file_reader.py  log_entry.py  report_builder.py  report_manager.py
core/reports/: average_report.py  endpoint_report.py  report_registry.py  user_agent_report.py
log_examples/: file_path.py
tests/: conftest.py  parametrize_data.py
tests/unit/: test_average_report.py  test_date_filter.py  test_log_entry.py  test_log_reader.py
