[project]
name = "work-mate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "argparse>=1.4.0",
    "black>=25.1.0",
    "orjson>=3.11.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
